[tool.poetry]
name = "ts2vec"
version = "0.1.0"
description = ""
authors = ["Zhihan Yue", "Viktor Kronvall"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Bottleneck = "1.3.2"
torch = "1.8.1"
scipy = "1.6.1"
numpy = "1.19.2"
statsmodels = "0.12.2"
pandas = "1.0.1"
scikit-learn = "0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
